# knowledge-discovery-agentic-system

./: .gitignore  main.py  pyproject.toml
src/agents/: __init__.py  research_agent.py
src/graphs/: __init__.py  research_graph.py
src/state/: __init__.py  base.py
src/tools/: __init__.py  web_search.py
